# Home-Streaming-Audio-Janitor-HSAJ-

./: .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  SPEC.md
.github/workflows/: ci.yml
adr/: 0001-bridge-separate-service.md  0002-dolby-atmos-immunity.md  0003-first-seen-tracking.md
bridge/: package-lock.json  package.json
bridge/src/: blocked.js  blocked.test.js  index.integration.test.js  index.js
configs/: hsaj.example.yaml
configs/systemd/: hsaj-bridge.service  hsaj-core.service  hsaj-core.timer  hsaj-maintenance.service  hsaj.env.example
core/: pyproject.toml  requirements-dev.txt
core/core/: __init__.py  app.py
core/src/hsaj/: __init__.py  atmos.py  blocking.py  bridge_auth.py  cli.py  config.py  executor.py  exemptions.py  guardrails.py  logging_utils.py  operator_service.py  plan_runs.py  plan_validation.py  planner.py  reviews.py  roon.py  runtime_jobs.py  scanner.py  server.py  timeutils.py  transport.py
core/src/hsaj/db/: __init__.py  engine.py  migrations.py  models.py
core/src/hsaj_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
core/tests/: test_app.py  test_atmos.py  test_blocking.py  test_cli_history.py  test_cli_roon_sync.py  test_config.py  test_engine.py  test_migrations.py  test_operator_service.py  test_planner_executor.py  test_roon.py  test_runtime_jobs.py  test_scanner.py  test_server.py  test_smoke_e2e.py  test_transport.py
docs/: design-implementation-matrix.md  systemd.md
tmp-smoke-debug/: hsaj.yaml
tmp-smoke-debug2/: hsaj.yaml
tools/: bootstrap.py  install_linux.py  smoke_example.py
(+5 files in other folders)
