[project]
name = "hsaj-core"
version = "0.1.0"
description = "Core logic for Home Streaming Audio Janitor"
authors = [{name = "HSAJ Team"}]
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
