[project]
name = "hsaj-core"
version = "0.1.0"
description = "Core logic for Home Streaming Audio Janitor"
authors = [{name = "HSAJ Team"}]
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0,<7",
    "SQLAlchemy>=2.0,<3",
    "pydantic>=2.9,<3",
    "typer>=0.12,<0.13",
    "mutagen>=1.47,<2",
]

[project.scripts]
hsaj = "hsaj.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".", "src"]
